fixed navbar not filling screen width on mobile

--- a/frontend/effective-shooting-percentage/src/App.css
+++ b/frontend/effective-shooting-percentage/src/App.css
@@ -1,6 +1,4 @@
 *{
-  margin:0;
-  padding:0;
   font-weight: bold;
   font-family: "Lucida Console", Monaco, monospace;
 }
@@ -14,7 +12,6 @@ margin-top: 25px ;
 display: block ;
 margin: auto ;
 width: 95% ;
-max-width: 1000px ;
 background-color:white; 
 }
 
